# jpy-tillo-proxy

./: .env.dist  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
app/: config.py  main.py
app/domain/brand/: query_filters.py  services.py
app/domain/digital_card/: body_requests.py  services.py
app/domain/floats/: body_requests.py  services.py
app/routers/: brands.py  digital_cards.py  floats.py  physical_cards.py
app/tillo/: clients.py  services.py
