[project]
name = "jpy-tillo-proxy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anton Nazarov", email = "tonynazarov@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "gunicorn>=23.0.0",
    "jpy-tillo-sdk",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.4",
]

[tool.uv.sources]
jpy-tillo-sdk = { git = "https://github.com/jaddek/jpy-tillo-sdk.git", branch = "dev" }




#[tool.uv]
#dev-dependencies = [
#    "ruff>=0.6.2",
#    "fastapi-cli>=0.0.5",
#]